--- a/Today/Info.plist
+++ b/Today/Info.plist
@@ -2,8 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Нам нужно ваше местоположение</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Нам нужно ваше местоположение</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Нам нужно ваше местоположение</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
+		<key>UIApplicationSupportsTabbedSceneCollection</key>
+		<false/>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 		<key>UISceneConfigurations</key>
